# screentime-exporter

./: README.md  pyproject.toml
src/screentime_exporter/: __init__.py  automation.py  cli.py  exporter.py  ocr.py  parser.py  screenshot.py
tests/: test_exporter.py  test_parser.py
